# wx

wxtest1/: CMakeLists.txt  MyFrame.fbp  MyFrame.xrc  main.cpp
wxtest1-1/: CMakeLists.txt
wxtest1-1/data/: MyFrame.fbp  MyFrame.xrc
wxtest1-1/src/: frame.cpp  frame.h  main.cpp
wxtest1-2/: CMakeLists.txt
wxtest1-2/src/: CMakeLists.txt  frame.cpp  frame.h  main.cpp
wxtest1-3/: CMakeLists.txt
wxtest1-3/data/: CMakeLists.txt  app.xpm  resource.rc.in  wxtest1-3.pot
wxtest1-3/locales/: es_MX.po  joel.mo
wxtest1-3/src/: CMakeLists.txt  frame.cpp  frame.h  main.cpp
wxtest1-4/: CMakeLists.txt
wxtest1-4/data/: quit_16.xpm  quit_32.xpm  quit_64.xpm  wxtest1-4.pot
wxtest1-4/locales/: CMakeLists.txt  es_MX.po
wxtest1-4/src/: CMakeLists.txt  frame.cpp
wxtest1-5/: CMakeLists.txt
wxtest1-5/data/: CMakeLists.txt  wxtest1-5.pot
wxtest1-5/locales/: CMakeLists.txt  es_MX.po
wxtest1-5/src/: CMakeLists.txt  frame.cpp  frame.h  main.cpp
wxtest2/: CMakeLists.txt
wxtest2/data/: Regedit-Icon-16.xpm  Regedit-Icon-32.xpm  resource.rc.in  tux-logo.xpm  windows-vista.xpm
wxtest2/src/: CMakeLists.txt  main.cpp
wxtest3-0/: meson.build
wxtest3-0/data/: MyFrame.fbp  MyFrame.xrc
wxtest3-0/locale/: LINGUAS  POTFILES  es.po  it.po  meson.build  pr.po  wxtest3.pot
wxtest3-0/scripts/: meson.build  potfiles.py  touch.py
wxtest3-0/src/: MesonHelper.h.in  MyFrame.cpp  MyFrame.h  main.cpp  main.h  meson.build
wxtest4-0/: meson.build
wxtest4-0/data/: close_24.h  meson.build  ok_22.h
wxtest4-0/locale/: POTFILES  es.po  it.po  meson.build
wxtest4-0/src/: main.cpp
wxtest4-1/: meson.build
wxtest4-1/data/: platform.h  resource.rc.in  xp.manifest.xml
wxtest4-1/locale/: POTFILES  meson.build  pr.po
wxtest4-1/src/: MyFrame.cpp  MyFrame.h  main.cpp  meson.build
wxtest5/: DialogItemEditor.cpp  DialogItemEditor.h  MyFrame.cpp  MyFrame.h  main.cpp  meson.build  meson_options.txt
wxtest5/data/: MyFrame.fbp  MyFrame.xrc  desktop.in.in  meson.build  resource.rc.in
wxtest5/locale/: POTFILES  es.po  it.po  meson.build  wxtest5.pot
